[gd_scene load_steps=9 format=3 uid="uid://yx2r3bxi0kfc"]

[ext_resource type="Script" uid="uid://d5xww8ib3j7p" path="res://addons/MultiplayCore/MultiPlay.gd" id="1_ubvtg"]
[ext_resource type="PackedScene" uid="uid://lw18orwsroqc" path="res://test_player.tscn" id="2_d01oj"]
[ext_resource type="Script" uid="uid://371kceg3enyp" path="res://addons/MultiplayCore/auths/MPAuth.gd" id="3_ta4np"]
[ext_resource type="Script" uid="uid://dph2uywxp0nfc" path="res://addons/MultiplayCore/net_protocols/ENetProtocol.gd" id="4_jxa1l"]
[ext_resource type="Script" uid="uid://cu0ftthhciiip" path="res://tests/TestScriptz.gd" id="6_kqkof"]
[ext_resource type="Script" uid="uid://45us1mupyju0" path="res://tests/TransformSetTest.gd" id="6_xx5hu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jls2"]
size = Vector2(1174, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfnk7"]
size = Vector2(200, 20)

[node name="MultiPlay" type="Node2D"]

[node name="MultiplayCore" type="Node" parent="."]
script = ExtResource("1_ubvtg")
port = 3000
max_players = 4
connect_timeout_ms = 10000
player_scene = ExtResource("2_d01oj")
swap_input_action = "swap"

[node name="MPAuth" type="Node" parent="MultiplayCore"]
script = ExtResource("3_ta4np")

[node name="ENetProtocol" type="Node" parent="MultiplayCore"]
script = ExtResource("4_jxa1l")

[node name="PassAuth" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-24, 602)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(577, 1.5)
shape = SubResource("RectangleShape2D_0jls2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="test" type="Node2D" parent="."]
script = ExtResource("6_kqkof")

[node name="Test" type="Area2D" parent="."]
position = Vector2(810, 581)
script = ExtResource("6_xx5hu")

[node name="Label" type="Label" parent="Test"]
offset_left = -63.0
offset_top = -24.0
offset_right = 65.0
offset_bottom = -1.0
text = "Position Set Test"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Test"]
shape = SubResource("RectangleShape2D_cfnk7")
debug_color = Color(0.972549, 0, 0.431373, 0.419608)

[connection signal="player_connected" from="MultiplayCore" to="test" method="_on_multiplay_core_player_connected"]
[connection signal="player_disconnected" from="MultiplayCore" to="test" method="_on_multiplay_core_player_disconnected"]
